@@ -1,5 +1,13 @@
+verilog/v_hier_subprim.v:001: COMMENT  '// DESCRIPTION: Verilog-Perl: Example Verilog for testing package'
+verilog/v_hier_subprim.v:002: COMMENT  '//'
+verilog/v_hier_subprim.v:003: COMMENT  '// This file ONLY is placed into the Public Domain, for any use,'
+verilog/v_hier_subprim.v:004: COMMENT  '// without warranty, 2000-2012 by Wilson Snyder.'
+verilog/v_hier_subprim.v:006: COMMENT  '// surefire lint_off UDPUNS'
 verilog/v_hier_subprim.v:008: MODULE  'primitive' 'v_hier_prim' undef '0'
+verilog/v_hier_subprim.v:008: COMMENT  '/*AUTOARG*/'
+verilog/v_hier_subprim.v:009: COMMENT  '// Outputs'
 verilog/v_hier_subprim.v:010: PORT  'q' 'module' '' '' '' '1'
+verilog/v_hier_subprim.v:011: COMMENT  '// Inputs'
 verilog/v_hier_subprim.v:012: PORT  'a' 'module' '' '' '' '2'
 verilog/v_hier_subprim.v:014: VAR  'port' 'q' 'module' '' '' '' ''
 verilog/v_hier_subprim.v:014: PORT  'q' 'module' 'output' '' '' '0'
@@ -9,33 +17,47 @@ verilog/v_hier_subprim.v:022: ENDMODULE  'endprimitive'
 verilog/v_hier_subprim.v:025: MODULE  'module' 'bug27070' undef '1'
 verilog/v_hier_subprim.v:027: VAR  'parameter' 'TAP' 'module' '' '' '' '4'b1001'
 verilog/v_hier_subprim.v:028: ENDMODULE  'endmodule'
+verilog/v_hier_sub.v:001: COMMENT  '// DESCRIPTION: Verilog-Perl: Example Verilog for testing package'
+verilog/v_hier_sub.v:002: COMMENT  '//'
+verilog/v_hier_sub.v:003: COMMENT  '// This file ONLY is placed into the Public Domain, for any use,'
+verilog/v_hier_sub.v:004: COMMENT  '// without warranty, 2000-2012 by Wilson Snyder.'
 verilog/v_hier_sub.v:006: MODULE  'module' 'v_hier_sub' undef '0'
+verilog/v_hier_sub.v:006: COMMENT  '/*AUTOARG*/'
 verilog/v_hier_sub.v:007: VAR  'port' 'clk' 'module' '' '' '' ''
 verilog/v_hier_sub.v:007: PORT  'clk' 'module' 'input' '' '' '1'
 verilog/v_hier_sub.v:008: VAR  'port' 'avec' 'module' '' '[3:0]' '' ''
 verilog/v_hier_sub.v:008: PORT  'avec' 'module' 'input' '[3:0]' '' '2'
+verilog/v_hier_sub.v:008: COMMENT  '// Comment for v_hier_sub, avec'
+verilog/v_hier_sub.v:009: COMMENT  '/* Comment for v_hier_sub, qvec */'
 verilog/v_hier_sub.v:009: VAR  'port' 'qvec' 'module' '' '[3:0]' '' ''
 verilog/v_hier_sub.v:009: PORT  'qvec' 'module' 'output' '[3:0]' '' '3'
 verilog/v_hier_sub.v:012: VAR  'parameter' 'FROM_DEFPARAM' 'module' '' '' '' '1'
 verilog/v_hier_sub.v:014: VAR  'net' 'a1' 'module' 'supply1' '' '' ''
+verilog/v_hier_sub.v:020: COMMENT  '// Outputs'
 verilog/v_hier_sub.v:019: INSTANT  'v_hier_subsub' 'subsub0' ''
 verilog/v_hier_sub.v:017: PARAMPIN  'IGNORED' ''sh20' '1'
 verilog/v_hier_sub.v:021: PIN  'q' 'qvec[0]' '1'
+verilog/v_hier_sub.v:022: COMMENT  '// Inputs'
 verilog/v_hier_sub.v:023: PIN  'a' 'a1' '2'
 verilog/v_hier_sub.v:023: ENDCELL  ''
+verilog/v_hier_sub.v:023: COMMENT  '// Comment for subsub cell'
 verilog/v_hier_sub.v:027: VAR  'genvar' 'K' 'module' '' '' '' ''
 verilog/v_hier_sub.v:027: VAR  'genvar' 'K_UNUSED' 'module' '' '' '' ''
+verilog/v_hier_sub.v:029: COMMENT  '// By pin position, inside generate'
 verilog/v_hier_sub.v:030: INSTANT  'v_hier_subsub' 'subsub2' ''
 verilog/v_hier_sub.v:030: PIN  '' 'qvec[2]' '1'
 verilog/v_hier_sub.v:030: PIN  '' '1'b0' '2'
 verilog/v_hier_sub.v:030: ENDCELL  ''
 verilog/v_hier_sub.v:034: FUNCTION  'function' 'foo' ''
 verilog/v_hier_sub.v:035: ATTRIBUTE  '(* attribute *)'
-verilog/v_hier_sub.v:036: ATTRIBUTE  'synopsys metacommenttest'
+verilog/v_hier_sub.v:036: COMMENT  '/* synopsys metacommenttest */'
 verilog/v_hier_sub.v:037: VAR  'port' 'not_part_of_pinlist' 'function' '' '' '' ''
 verilog/v_hier_sub.v:037: PORT  'not_part_of_pinlist' 'function' 'input' '' '' '0'
 verilog/v_hier_sub.v:039: ENDTASKFUNC  'endfunction'
 verilog/v_hier_sub.v:041: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:001: COMMENT  '// Not legal:'
+verilog/parser_bugs.v:002: COMMENT  '// end : ADDRESS_TEST_BLOCK             // See 9.8.1'
+verilog/parser_bugs.v:003: COMMENT  '// `define at EOF with no newline'
 verilog/parser_bugs.v:005: MODULE  'module' 'bug26141' undef '0'
 verilog/parser_bugs.v:006: VAR  'net' 'b' 'module' 'wire' '[0:3]' '' ''
 verilog/parser_bugs.v:007: VAR  'net' 'a' 'module' 'wire' '' '' 'b[2]'
@@ -74,6 +96,12 @@ verilog/parser_bugs.v:037: ENDMODULE  'endmodule'
 verilog/parser_bugs.v:039: MODULE  'module' 'bug26997' undef '0'
 verilog/parser_bugs.v:040: INSTANT  'MUX_REG_8x8' 'PAGE_REG_B3' ''
 verilog/parser_bugs.v:041: PIN  'CLK' 'CLK' '1'
+verilog/parser_bugs.v:047: COMMENT  '/*
+			     .IN	(DATA_RES[31:24]),
+			     .OUT	(PAGE[31:24]),
+			     .EN_IN	(EN_B3),
+			     .EN_OUT	(PAGE_SEL),
+			     */'
 verilog/parser_bugs.v:048: PIN  'TC' '' '2'
 verilog/parser_bugs.v:049: PIN  'TD' '' '3'
 verilog/parser_bugs.v:050: PIN  'TQ' '' '4'
@@ -201,6 +229,8 @@ verilog/parser_bugs.v:182: VAR  'var' 'b' 'module' '' 'reg' '' ''
 verilog/parser_bugs.v:183: VAR  'var' 'c' 'module' '' 'reg [1:0]' '' ''
 verilog/parser_bugs.v:188: ENDMODULE  'endmodule'
 verilog/parser_bugs.v:190: MODULE  'module' 'colonslash' undef '0'
+verilog/parser_bugs.v:193: COMMENT  '//Error'
+verilog/parser_bugs.v:195: COMMENT  '/*Another comment*/'
 verilog/parser_bugs.v:199: ENDMODULE  'endmodule'
 verilog/parser_bugs.v:201: MODULE  'module' 'enums' undef '0'
 verilog/parser_bugs.v:202: VAR  'var' 'light' 'module' '' 'enum' '' ''
@@ -244,6 +274,8 @@ verilog/parser_bugs.v:231: VAR  'port' 'name' 'module' '' 'reg' '' '0'
 verilog/parser_bugs.v:231: PORT  'name' 'module' 'output' 'reg' '' '1'
 verilog/parser_bugs.v:233: ENDMODULE  'endmodule'
 verilog/parser_bugs.v:234: MODULE  'module' 'bug10' undef '0'
+verilog/parser_bugs.v:246: COMMENT  '// Part of expression'
+verilog/parser_bugs.v:250: COMMENT  '// Statement'
 verilog/parser_bugs.v:255: ENDMODULE  'endmodule'
 verilog/parser_bugs.v:257: MODULE  'module' 'bug33' undef '0'
 verilog/parser_bugs.v:258: VAR  'var' 'i' 'module' '' 'integer' '' ''
@@ -276,8 +308,13 @@ verilog/parser_bugs.v:305: VAR  'var' 'CONS' 'task' '' 'const int' '' '8'
 verilog/parser_bugs.v:308: ENDTASKFUNC  'endtask'
 verilog/parser_bugs.v:309: ENDMODULE  'endmodule'
 verilog/parser_bugs.v:311: MODULE  'module' 'bug_empty_func_param' undef '0'
+verilog/parser_bugs.v:312: COMMENT  '//function int intfunc(int a=0, b=1);'
+verilog/parser_bugs.v:313: COMMENT  '//   return a+b;'
+verilog/parser_bugs.v:314: COMMENT  '//endfunction'
 verilog/parser_bugs.v:321: ENDMODULE  'endmodule'
 verilog/parser_bugs.v:323: MODULE  'module' 'dotted_funcs' undef '0'
+verilog/parser_bugs.v:324: COMMENT  '// Call task'
+verilog/parser_bugs.v:325: COMMENT  '// Call function'
 verilog/parser_bugs.v:326: ENDMODULE  'endmodule'
 verilog/parser_bugs.v:328: MODULE  'module' 'var_only_in_block' undef '0'
 verilog/parser_bugs.v:330: VAR  'var' 'only_a_var_in_blk' 'module' '' 'integer' '' ''
@@ -287,14 +324,19 @@ verilog/parser_bugs.v:335: VAR  'port' 'VEC' 'module' '' '[2:0]' '' ''
 verilog/parser_bugs.v:335: PORT  'VEC' 'module' 'input' '[2:0]' '' '1'
 verilog/parser_bugs.v:336: VAR  'port' 'VEC2' 'module' '' '[2:0]' '' ''
 verilog/parser_bugs.v:336: PORT  'VEC2' 'module' 'input' '[2:0]' '' '2'
+verilog/parser_bugs.v:336: COMMENT  '// No direction, no port, no data type; inherits'
 verilog/parser_bugs.v:337: VAR  'port' 'NOVEC' 'module' '' '' '' ''
 verilog/parser_bugs.v:337: PORT  'NOVEC' 'module' 'input' '' '' '3'
+verilog/parser_bugs.v:337: COMMENT  '// No direction, no data type; use `default_nettype'
 verilog/parser_bugs.v:338: VAR  'port' 'ARY' 'module' '' '' '[1:0]' ''
 verilog/parser_bugs.v:338: PORT  'ARY' 'module' 'input' '' '[1:0]' '4'
 verilog/parser_bugs.v:339: VAR  'port' 'NOARY2' 'module' '' '' '' ''
 verilog/parser_bugs.v:339: PORT  'NOARY2' 'module' 'input' '' '' '5'
+verilog/parser_bugs.v:339: COMMENT  '// Array doesn't inherit'
 verilog/parser_bugs.v:340: VAR  'port' 'STILL_IN' 'module' '' 'logic' '' ''
 verilog/parser_bugs.v:340: PORT  'STILL_IN' 'module' 'input' 'logic' '' '6'
+verilog/parser_bugs.v:340: COMMENT  '// No direction, data type; inherits direction'
+verilog/parser_bugs.v:341: COMMENT  '// Logic type'
 verilog/parser_bugs.v:341: VAR  'port' 'TYPED' 'module' '' 'logic' '' ''
 verilog/parser_bugs.v:341: PORT  'TYPED' 'module' 'input' 'logic' '' '7'
 verilog/parser_bugs.v:343: TASK  'task' 't'
@@ -340,12 +382,14 @@ verilog/parser_bugs.v:385: MODULE  'module' 'bug192' undef '0'
 verilog/parser_bugs.v:386: COVERGROUP  'covergroup' 'cg192'
 verilog/parser_bugs.v:390: ENDGROUP  'endgroup'
 verilog/parser_bugs.v:391: VAR  'var' 'cover_ts' 'module' '' 'cg192' '' 'new()'
+verilog/parser_bugs.v:391: COMMENT  '// also bug361'
 verilog/parser_bugs.v:392: ENDMODULE  'endmodule'
 verilog/parser_bugs.v:394: FUNCTION  'function' 'func_implied_in' 'bit'
 verilog/parser_bugs.v:394: VAR  'port' 'i' 'function' '' 'bit' '' ''
 verilog/parser_bugs.v:394: PORT  'i' 'function' 'input' 'bit' '' '1'
 verilog/parser_bugs.v:394: ENDTASKFUNC  'endfunction'
 verilog/parser_bugs.v:396: MODULE  'module' 'sparam' undef '0'
+verilog/parser_bugs.v:400: COMMENT  '// bug221'
 verilog/parser_bugs.v:398: ENDMODULE  'endmodule'
 verilog/parser_bugs.v:401: VAR  'port' 'sig' 'sequence' '' '' '' ''
 verilog/parser_bugs.v:401: PORT  'sig' 'sequence' 'input' '' '' '1'
@@ -424,11 +468,19 @@ verilog/parser_bugs.v:436: PORT  'B' 'module' 'input' '' '' '0'
 verilog/parser_bugs.v:437: ENDMODULE  'endmodule'
 verilog/parser_bugs.v:439: VAR  'net' '\wire ' 'netlist' 'wire' '' '' 'bug282_must_keep_escape'
 verilog/parser_bugs.v:441: MODULE  'module' 'bug403_bug404' undef '0'
+verilog/parser_bugs.v:442: COMMENT  '// Simulators vary as to if "(* /* */ )" is legal or not'
 verilog/parser_bugs.v:443: ATTRIBUTE  '(* attr *)'
 verilog/parser_bugs.v:443: VAR  'net' 'foo' 'module' 'wire' '' '' ''
+verilog/parser_bugs.v:451: COMMENT  '/* multi
+ line
+ msg738*/'
 verilog/parser_bugs.v:447: ENDMODULE  'endmodule'
-verilog/parser_bugs.v:449: MODULE  'module' 'bug422' undef '0'
-verilog/parser_bugs.v:452: ENDMODULE  'endmodule'
+verilog/parser_bugs.v:453: MODULE  'module' 'bug422' undef '0'
+verilog/parser_bugs.v:456: ENDMODULE  'endmodule'
+verilog/pinorder.v:001: COMMENT  '// DESCRIPTION: Verilog-Perl: Example Verilog for testing package'
+verilog/pinorder.v:002: COMMENT  '//'
+verilog/pinorder.v:003: COMMENT  '// This file ONLY is placed into the Public Domain, for any use,'
+verilog/pinorder.v:004: COMMENT  '// without warranty, 2003 by Wilson Snyder.'
 verilog/pinorder.v:006: MODULE  'module' 'pinorder4' undef '0'
 verilog/pinorder.v:007: VAR  'net' 'b_i' 'module' 'wire' '' '' ''
 verilog/pinorder.v:008: VAR  'net' 'd_o' 'module' 'wire' '' '' ''
@@ -456,7 +508,10 @@ verilog/pinorder.v:018: PIN  '' 'd_o' '3'
 verilog/pinorder.v:018: ENDCELL  ''
 verilog/pinorder.v:020: ENDMODULE  'endmodule'
 verilog/pinorder.v:022: MODULE  'module' 'foo2' undef '0'
+verilog/pinorder.v:022: COMMENT  '/*AUTOARG*/'
+verilog/pinorder.v:023: COMMENT  '// Outputs'
 verilog/pinorder.v:024: PORT  'x' 'module' '' '' '' '1'
+verilog/pinorder.v:025: COMMENT  '// Inputs'
 verilog/pinorder.v:026: PORT  'z' 'module' '' '' '' '2'
 verilog/pinorder.v:026: PORT  'y' 'module' '' '' '' '3'
 verilog/pinorder.v:028: VAR  'port' 'z' 'module' '' '' '' ''
@@ -468,6 +523,8 @@ verilog/pinorder.v:030: PORT  'x' 'module' 'output' '' '' '0'
 verilog/pinorder.v:031: VAR  'var' 'x' 'module' '' 'reg' '' ''
 verilog/pinorder.v:033: ENDMODULE  'endmodule'
 verilog/pinorder.v:035: MODULE  'module' 'foo' undef '0'
+verilog/pinorder.v:035: COMMENT  '/*AUTOARG*/'
+verilog/pinorder.v:036: COMMENT  '// Inputs'
 verilog/pinorder.v:037: PORT  'y' 'module' '' '' '' '1'
 verilog/pinorder.v:037: PORT  'x' 'module' '' '' '' '2'
 verilog/pinorder.v:037: PORT  'abcconst' 'module' '' '' '' '3'
@@ -498,6 +555,7 @@ verilog/parser_sv.v:003: VAR  'var' 'pkg_data' 'package' '' 'bit [7:0]' '' ''
 verilog/parser_sv.v:004: ENDPACKAGE  'endpackage'
 verilog/parser_sv.v:006: MODULE  'module' 'times' undef '0'
 verilog/parser_sv.v:007: VAR  'var' 'x' 'module' '' 'time' '' ''
+verilog/parser_sv.v:008: COMMENT  '// Note no space'
 verilog/parser_sv.v:009: ENDMODULE  'endmodule'
 verilog/parser_sv.v:011: INTERFACE  'interface' 'itf'
 verilog/parser_sv.v:011: VAR  'parameter' 'num_of_cli' 'interface' '' '' '' '0'
@@ -536,16 +594,23 @@ verilog/parser_sv.v:028: VAR  'var' 'data_' 'module' '' 'logic [7:0]' '' ''
 verilog/parser_sv.v:028: VAR  'var' 'bork' 'module' '' 'logic [7:0]' '[2]' ''
 verilog/parser_sv.v:029: CONTASSIGN  'assign' 'd_int' 'd_in+pkg_data'
 verilog/parser_sv.v:031: CONTASSIGN  'assign' 'modported_int.data' 'data_'
+verilog/parser_sv.v:044: COMMENT  '//a1:   assert property(p1) else $warning("\nProperty violated\n");'
 verilog/parser_sv.v:046: ENDMODULE  'endmodule'
+verilog/parser_sv.v:048: COMMENT  '// Different ways of declaring pins/vars'
 verilog/parser_sv.v:049: MODULE  'module' 'line49_diff_pins1' undef '0'
 verilog/parser_sv.v:050: VAR  'port' 'in_nw' 'module' '' '' '' ''
 verilog/parser_sv.v:050: PORT  'in_nw' 'module' 'input' '' '' '1'
+verilog/parser_sv.v:050: COMMENT  '// Input, no type'
 verilog/parser_sv.v:051: VAR  'port' 'in_vec' 'module' '' '[1:0]' '[2:0]' ''
 verilog/parser_sv.v:051: PORT  'in_vec' 'module' 'input' '[1:0]' '[2:0]' '2'
+verilog/parser_sv.v:051: COMMENT  '// Input, implicit'
 verilog/parser_sv.v:052: VAR  'port' 'in_nvec' 'module' '' '' '' ''
 verilog/parser_sv.v:052: PORT  'in_nvec' 'module' 'input' '' '' '3'
+verilog/parser_sv.v:052: COMMENT  '// Isn't vectorized'
 verilog/parser_sv.v:053: VAR  'port' 'out_logic' 'module' '' 'logic' '' ''
 verilog/parser_sv.v:053: PORT  'out_logic' 'module' 'output' 'logic' '' '4'
+verilog/parser_sv.v:053: COMMENT  '// Output and var'
+verilog/parser_sv.v:054: COMMENT  '// "logic" sticks'
 verilog/parser_sv.v:054: VAR  'port' 'out_also_logic' 'module' '' '' '' ''
 verilog/parser_sv.v:054: PORT  'out_also_logic' 'module' 'output' '' '' '5'
 verilog/parser_sv.v:056: ENDMODULE  'endmodule'
@@ -568,6 +633,7 @@ verilog/parser_sv.v:067: VAR  'var' 'var1_imp_logic' 'module' '' 'logic' '' ''
 verilog/parser_sv.v:068: ENDMODULE  'endmodule'
 verilog/parser_sv.v:070: PROGRAM  'program' 'first_prog'
 verilog/parser_sv.v:071: VAR  'var' 'i' 'program' '' 'int' '' ''
+verilog/parser_sv.v:074: COMMENT  '// Importing'
 verilog/parser_sv.v:072: ENDPROGRAM  'endprogram'
 verilog/parser_sv.v:075: PACKAGE  'package' 'imp_test_pkg'
 verilog/parser_sv.v:076: VAR  'typedef' 'byte_t' 'package' '' 'logic [7:0]' '' ''
@@ -602,8 +668,10 @@ verilog/parser_sv.v:103: MODULE  'module' 'arrayed_wire' undef '0'
 verilog/parser_sv.v:104: VAR  'net' 'n2' 'module' 'wire' '[3:0][7:0]' '' ''
 verilog/parser_sv.v:105: ENDMODULE  'endmodule'
 verilog/parser_sv.v:107: TASK  'task' 'empty_task'
+verilog/parser_sv.v:107: COMMENT  '// sv design book'
 verilog/parser_sv.v:108: ENDTASKFUNC  'endtask'
 verilog/parser_sv.v:109: TASK  'task' 'empty_task2'
+verilog/parser_sv.v:109: COMMENT  '// sv design book'
 verilog/parser_sv.v:110: VAR  'var' 'i' 'task' '' 'integer' '' ''
 verilog/parser_sv.v:111: ENDTASKFUNC  'endtask'
 verilog/parser_sv.v:113: TASK  'task' 'check_casts'
@@ -634,6 +702,7 @@ verilog/parser_sv.v:143: PORT  'to' 'function' 'input' 'VclassWCopy' '' '1'
 verilog/parser_sv.v:145: ENDTASKFUNC  'endfunction'
 verilog/parser_sv.v:147: TASK  'task' 'foreach_memref'
 verilog/parser_sv.v:148: VAR  'var' 'mem' 'task' '' 'bit [0:52][7:0]' '' ''
+verilog/parser_sv.v:149: COMMENT  '// It's *not* legal according to the grammar to have dotted/package ids here'
 verilog/parser_sv.v:151: ENDTASKFUNC  'endtask'
 verilog/parser_sv.v:153: CLASS  'class' 'PreTypedefedClass' ''
 verilog/parser_sv.v:155: FUNCTION  'function' 'new' ''
@@ -641,6 +710,7 @@ verilog/parser_sv.v:156: ENDCLASS  'endclass'
 verilog/parser_sv.v:157: CLASS  'class' 'NewInNew' ''
 verilog/parser_sv.v:160: FUNCTION  'function' 'new' ''
 verilog/parser_sv.v:162: ENDTASKFUNC  'endfunction'
+verilog/parser_sv.v:165: COMMENT  '// std package'
 verilog/parser_sv.v:163: ENDCLASS  'endclass'
 verilog/parser_sv.v:157: CLASS  'class' 'TryStd' ''
 verilog/parser_sv.v:167: VAR  'var' 's1' 'class' '' 'semaphore' '' ''
@@ -672,6 +742,8 @@ verilog/parser_sv.v:205: ENDMODULE  'endmodule'
 verilog/parser_sv.v:202: CLASS  'class' 'solve_size' ''
 verilog/parser_sv.v:208: VAR  'var' 'arrayed' 'class' '' 'rand byte' '' ''
 verilog/parser_sv.v:209: VAR  'var' 'b' 'class' '' 'rand bit' '' ''
+verilog/parser_sv.v:210: COMMENT  '// The dot below doesn't seem legal according to grammar, but'
+verilog/parser_sv.v:211: COMMENT  '// the intent makes sense, and it appears in the VMM'
 verilog/parser_sv.v:213: ENDCLASS  'endclass'
 verilog/parser_sv.v:202: CLASS  'class' 'vmm_stuff' ''
 verilog/parser_sv.v:216: TASK  'task' 'examples'
@@ -698,6 +770,8 @@ verilog/parser_sv.v:237: ENDCLASS  'endclass'
 verilog/parser_sv.v:239: TASK  'task' 'empty_comma'
 verilog/parser_sv.v:244: ENDTASKFUNC  'endtask'
 verilog/parser_sv.v:246: TASK  'task' 'vmm_more'
+verilog/parser_sv.v:249: COMMENT  '// Not part of 1800-2005 grammar, but likely in 1800-2009'
+verilog/parser_sv.v:254: COMMENT  '// Extern Functions/tasks when defined must scope to the class they're in to get appropriate types'
 verilog/parser_sv.v:252: ENDTASKFUNC  'endtask'
 verilog/parser_sv.v:255: FUNCTION  'function' 'vmm_cl_func_colon::uses_class_type' 'int'
 verilog/parser_sv.v:255: VAR  'port' 'note_uses_class_type' 'function' '' 'restart_e' '' ''
@@ -709,8 +783,10 @@ verilog/parser_sv.v:260: VAR  'typedef' 'T' 'module' '' 'int' '' ''
 verilog/parser_sv.v:261: INSTANT  'sub' '' ''
 verilog/parser_sv.v:261: PIN  'T' '123' '1'
 verilog/parser_sv.v:261: ENDCELL  ''
+verilog/parser_sv.v:261: COMMENT  '// Different T'
 verilog/parser_sv.v:262: TASK  'task' 'hidden'
 verilog/parser_sv.v:263: VAR  'typedef' 'T' 'task' '' 'bit' '' ''
+verilog/parser_sv.v:263: COMMENT  '// Different T'
 verilog/parser_sv.v:264: ENDTASKFUNC  'endtask'
 verilog/parser_sv.v:265: ENDMODULE  'endmodule'
 verilog/parser_sv.v:268: VAR  'member' 'm_a' 'struct' '' 'rand int' '' ''
@@ -746,6 +822,7 @@ verilog/parser_sv.v:298: ENDTASKFUNC  'endfunction'
 verilog/parser_sv.v:299: FUNCTION  'function' 'new' ''
 verilog/parser_sv.v:300: ENDTASKFUNC  'endfunction'
 verilog/parser_sv.v:301: VAR  'var' 'cl_inited' 'netlist' '' 'cl_to_init' '' 'cl_to_init::init()'
+verilog/parser_sv.v:303: COMMENT  '// pure virtual functions have no endfunction.'
 verilog/parser_sv.v:304: CLASS  'class' 'pure_virt_func_class' 'virtual'
 verilog/parser_sv.v:305: FUNCTION  'function' 'pure_virt_func' 'string'
 verilog/parser_sv.v:305: ENDTASKFUNC  'endfunction'
@@ -759,7 +836,9 @@ verilog/parser_sv.v:311: ENDTASKFUNC  'endfunction'
 verilog/parser_sv.v:312: ENDCLASS  'endclass'
 verilog/parser_sv.v:304: CLASS  'class' 'extended' ''
 verilog/parser_sv.v:314: VAR  'typedef' 'be_t' 'class' '' 'base_enum' '' ''
+verilog/parser_sv.v:314: COMMENT  '// type must come from base class'
 verilog/parser_sv.v:315: FUNCTION  'function' 'create' 'int'
+verilog/parser_sv.v:315: COMMENT  '// Must override base's create'
 verilog/parser_sv.v:316: VAR  'var' 'mye' 'function' '' 'be_t' '' ''
 verilog/parser_sv.v:317: ENDTASKFUNC  'endfunction'
 verilog/parser_sv.v:318: ENDCLASS  'endclass'
@@ -770,6 +849,7 @@ verilog/parser_sv.v:324: VAR  'port' 'data_req' 'task' '' '' '' ''
 verilog/parser_sv.v:324: PORT  'data_req' 'task' 'input' '' '' '1'
 verilog/parser_sv.v:324: VAR  'port' 'randomize' 'task' '' 'bit' '' '1'
 verilog/parser_sv.v:324: PORT  'randomize' 'task' 'input' 'bit' '' '2'
+verilog/parser_sv.v:326: COMMENT  '// Generic method, not std::randomize'
 verilog/parser_sv.v:328: ENDTASKFUNC  'endtask'
 verilog/parser_sv.v:330: TASK  'task' 'foreach_class_scope_ln330'
 verilog/parser_sv.v:332: ENDTASKFUNC  'endtask'
@@ -779,6 +859,7 @@ verilog/parser_sv.v:338: MODULE  'module' 'gen_ln338' undef '0'
 verilog/parser_sv.v:345: ENDMODULE  'endmodule'
 verilog/parser_sv.v:347: MODULE  'module' 'par_packed' undef '0'
 verilog/parser_sv.v:348: VAR  'parameter' 'P1' 'module' '' 'logic [31:0]' '[3:0]' ''{1,2,3,4}'
+verilog/parser_sv.v:348: COMMENT  '// unpacked array'
 verilog/parser_sv.v:349: VAR  'member' 'ecc' 'struct' '' 'logic' '' ''
 verilog/parser_sv.v:349: VAR  'member' 'data' 'struct' '' 'logic [7:0]' '' ''
 verilog/parser_sv.v:349: VAR  'member' 'memsig' 'module' '' 'struct' '' ''
@@ -795,6 +876,8 @@ verilog/parser_sv.v:357: ENDMODULE  'endmodule'
 verilog/parser_sv.v:359: MODULE  'module' 'bins_bracket' undef '0'
 verilog/parser_sv.v:360: VAR  'parameter' 'N' 'module' '' '' '' '2'
 verilog/parser_sv.v:361: COVERGROUP  'covergroup' 'cg_debitor'
+verilog/parser_sv.v:363: COMMENT  '// 'std' overrides std:: package, which confuses VP'
+verilog/parser_sv.v:364: COMMENT  '//bins  std[] = { [0:N] };'
 verilog/parser_sv.v:366: ENDGROUP  'endgroup'
 verilog/parser_sv.v:367: ENDMODULE  'endmodule'
 verilog/parser_sv.v:369: CLASS  'class' 'ovm_void' 'virtual'
@@ -803,9 +886,11 @@ verilog/parser_sv.v:371: CLASS  'class' 'ovm_port_base' 'virtual'
 verilog/parser_sv.v:371: VAR  'parameter' 'IF' 'class' '' 'type' '' 'ovm_void'
 verilog/parser_sv.v:371: PORT  'IF' 'class' '' 'type' '' '1'
 verilog/parser_sv.v:372: ENDCLASS  'endclass'
+verilog/parser_sv09.v:001: COMMENT  '// 1800-2009 mantis1769'
 verilog/parser_sv09.v:002: MODULE  'module' 'mantis1769' undef '0'
 verilog/parser_sv09.v:002: VAR  'parameter' 'N' 'module' '' '' '' '1'
 verilog/parser_sv09.v:002: PORT  'N' 'module' '' '' '' '1'
+verilog/parser_sv09.v:005: COMMENT  '// 1800-2009 mantis1134'
 verilog/parser_sv09.v:004: ENDMODULE  'endmodule'
 verilog/parser_sv09.v:006: MODULE  'module' 'mantis1134_decoder' undef '0'
 verilog/parser_sv09.v:007: VAR  'parameter' 'BITS' 'module' '' '' '' '3'
@@ -816,6 +901,7 @@ verilog/parser_sv09.v:008: PORT  'A' 'module' 'input' '[BITS-1:0]' '' '1'
 verilog/parser_sv09.v:008: VAR  'port' 'Y' 'module' '' 'reg [OUT_BITS-1:0]' '' ''
 verilog/parser_sv09.v:008: PORT  'Y' 'module' 'output' 'reg [OUT_BITS-1:0]' '' '2'
 verilog/parser_sv09.v:009: CONTASSIGN  'assign' 'Y' '1<<A'
+verilog/parser_sv09.v:011: COMMENT  '// 1800-2009 mantis907'
 verilog/parser_sv09.v:010: ENDMODULE  'endmodule'
 verilog/parser_sv09.v:012: MODULE  'module' 'mantis907_default_parameter' undef '0'
 verilog/parser_sv09.v:013: VAR  'parameter' 'REQUIRED' 'module' '' '' '' ''
@@ -826,7 +912,9 @@ verilog/parser_sv09.v:015: VAR  'port' 'deflt' 'module' '' 'integer' '' '10'
 verilog/parser_sv09.v:015: PORT  'deflt' 'module' 'input' 'integer' '' '1'
 verilog/parser_sv09.v:016: ENDMODULE  'endmodule'
 verilog/parser_sv09.v:017: MODULE  'module' 'global_anal' undef '0'
+verilog/parser_sv09.v:017: COMMENT  '// Don't be anal about "global" in old code'
 verilog/parser_sv09.v:018: VAR  'var' 'global' 'module' '' 'integer' '' '1'
+verilog/parser_sv09.v:019: COMMENT  '// But still get it right'
 verilog/parser_sv09.v:021: ENDMODULE  'endmodule'
 verilog/parser_sv09.v:022: MODULE  'module' 'bug400' undef '0'
 verilog/parser_sv09.v:027: ENDMODULE  'endmodule'
